Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wakim.github.io by wakim</title>
+    <title>Wakim Jraige by wakim</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Wakim.github.io</h1>
+          <h1>Wakim Jraige</h1>
           <p>Personal Site</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/wakim">wakim</a></span>
