--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wakim.github.io by wakim</title>
+    <title>Wakim Jraige Personal Site</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <!--<script type="text/javascript">
+      window.lang = 'en';
+    </script>
+    <script src="javascripts/lang-mapping.js"></script>-->
+    
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -15,61 +20,110 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <style type="text/css">
+      .left {
+        float: left;
+      }
 
+      .justify {
+        text-align: justify;
+      }
+
+      .margin-right-10 {
+        margin-right: 10px;
+      }
+
+    </style>
   </head>
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/wakim">View On GitHub</a></li>
+          <li class="fork"><a href="https://github.com/wakim">Ver no GitHub</a></li>
         </nav>
       </div><!-- end header -->
-
     <div class="wrapper">
-
       <section>
         <div id="title">
-          <h1>Wakim.github.io</h1>
-          <p>Personal Site</p>
-          <hr>
+          <h1>Wakim Jraige</h1>
+          <p>Site Pessoal</p>
+          <hr />
           <span class="credits left">Project maintained by <a href="https://github.com/wakim">wakim</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
+      <main>
+        <h2>
+          <a name="resume" class="anchor" href="#resume">
+            <span class="octicon octicon-link"></span>
+          </a>
+          <span>Resumo</span>
+        </h2>
 
+        <hr />
+
+        <img src="images/me.jpg" alt="Me" class="left margin-right-10" />
+
+        <div>
+          <p class="justify">Graduado em Bacharelado em Ci&ecirc;ncias da Computa&ccedil;&atilde;o pela UFRJ.</p>
+          <p class="justify">Sou desenvolvedor Full Stack, especialmente nas &aacute;reas Web e Mobile. Motivado por novas t&eacute;cnologias, ferramentas e pr&aacute;ticas, voltadas para melhoria no desenvolvimento, aumento de produtividade e inova&ccedil;&atilde;o em solu&ccedil;&otilde;es.</p>
+          <p class="justify">Comecei na &aacute;rea de desenvolvimento WEB com manutenção e desenvolvimento de aplica&ccedil;&otilde;es Web utilizando parte do JavaEE (JSP, Servlets e JDBC) no back-end. HTML, JavaScript e CSS no front-end.</p>
+          <p class="justify">Minha segunda experi&ecirc;ncia em Web foi com JavaEE, utilizando EJB, JSF e JPA (Hibernate) no back-end. HTML, JavaScript (MVVM usando KnockoutJS) e CSS no front-end.</p>
+          <p class="justify">Meu interesse por Mobile surgiu motivado pelo Projeto Final, serviu como uma oportunidade para explorar o mundo Android. Possuo um app publicado e alguns em desenvolvimento (nas horas livres), originados de estudos utilizando sempre os padrões da plataforma.</p>
+        </div>
+
+        <h2>
+          <a name="projects" class="anchor" href="#projects">
+            <span class="octicon octicon-link"></span>
+          </a>
+          <span>Projetos</span>
+        </h2>
+
+        <hr />
+
+        <div>
+          <h3>
+            <a name="agile-planning-poker" class="anchor" href="#agile-planning-poker">
+              <span class="octicon octicon-link"></span>
+            </a>
+            <img src="images/bullet.png" />
+            <span>Agile Planning Poker</span>
+          </h3>
+          <p>Meu primeiro aplicativo mobile na plataforma Android, publicado na Play Store, resultante do começo do estudo na área Mobile e plataforma Android para o Projeto Final.<br />Link: <a href="https://play.google.com/store/apps/details?id=br.com.planning.poker">Agile Planning Poker</a></p>
+        </div>
+        <div>
+          <h3>
+            <a name="distributed-planning-poker" class="anchor" href="#distributed-planning-poker">
+              <span class="octicon octicon-link"></span>
+            </a>
+            <img src="images/bullet.png" />
+            <span>Distributed Planning Poker</span>
+          </h3>
+          <p>Evolução do Agile Planning Poker, que utiliza a plataforma Play Games&reg; da Google&reg; para permitir a integração e comunicação entre os participantes de Planning Poker em Equipes Distribuídas.<br />Link: <a href="#">Em Breve</a></p>
+        </div>
+      </main>
+      <footer>
+        <span class="left">
+          <!-- Posicione esta tag no cabeçalho ou imediatamente antes da tag de fechamento do corpo. -->
+          <script type="text/javascript" src="https://apis.google.com/js/platform.js">
+            {lang: 'pt-BR'}
+          </script>
+
+          <!-- Posicione esta tag onde você deseja que o widget apareça. -->
+          <div class="g-person" data-width="273" data-href="//plus.google.com/u/0/117143334411138297328" data-theme="dark" data-layout="landscape" data-showcoverphoto="false" data-rel="author"></div>
+        </span>
+
+        <span class="left">
+          <a href="http://pt.stackoverflow.com/users/6436/wakim">
+            <img src="http://stackexchange.com/users/flair/3557748.png" width="208" height="58" alt="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
+          </a>
+        </span>
+
+        <span class="left">
+          <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="hover" data-related="false"></script>
+        </span>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
   </body>
 </html>
