--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<<<<<<< HEAD
-    <title>Wakim Jraige Personal Site</title>
-=======
-    <title>Wakim Jraige by wakim</title>
->>>>>>> 2eb287e3c4a7183d0110b4c89731b0a9069114ec
+    <title>Wakim Jraige Site Pessoal</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -49,13 +45,8 @@
       <section>
         <div id="title">
           <h1>Wakim Jraige</h1>
-<<<<<<< HEAD
           <p>Site Pessoal</p>
           <hr />
-=======
-          <p>Personal Site</p>
-          <hr>
->>>>>>> 2eb287e3c4a7183d0110b4c89731b0a9069114ec
           <span class="credits left">Project maintained by <a href="https://github.com/wakim">wakim</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
