--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </main>
       <footer>
-        <span class="left">
+        <span class="left margin-right-10">
           <!-- Posicione esta tag no cabeçalho ou imediatamente antes da tag de fechamento do corpo. -->
           <script type="text/javascript" src="https://apis.google.com/js/platform.js">
             {lang: 'pt-BR'}
@@ -112,15 +112,15 @@
           <div class="g-person" data-width="273" data-href="//plus.google.com/u/0/117143334411138297328" data-theme="dark" data-layout="landscape" data-showcoverphoto="false" data-rel="author"></div>
         </span>
 
-        <span class="left">
+        <span class="left margin-right-10">
           <a href="http://pt.stackoverflow.com/users/6436/wakim">
             <img src="http://stackexchange.com/users/flair/3557748.png" width="208" height="58" alt="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
           </a>
         </span>
 
-        <span class="left">
+        <span class="left margin-right-10">
           <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="hover" data-related="false"></script>
+          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="inline" data-related="false"></script>
         </span>
       </footer>
     </div>
