--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <span class="left margin-right-10">
           <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="inline" data-related="false"></script>
+          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="click" data-related="false"></script>
         </span>
       </footer>
     </div>
