--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <span class="octicon octicon-link"></span>
           </a>
           <span>Resumo</span>
+          <span class="margin-right-10">
+            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="click" data-related="false"></script>
+          </span>
         </h2>
 
         <hr />
@@ -116,11 +120,6 @@
           <a href="http://pt.stackoverflow.com/users/6436/wakim">
             <img src="http://stackexchange.com/users/flair/3557748.png" width="208" height="58" alt="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for Wakim on Stack Exchange, a network of free, community-driven Q&amp;A sites" />
           </a>
-        </span>
-
-        <span class="left margin-right-10">
-          <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-          <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="click" data-related="false"></script>
         </span>
       </footer>
     </div>
