Adição do atributo target blank nos links externos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/wakim">Ver no GitHub</a></li>
+          <li class="fork"><a target="_blank" href="https://github.com/wakim">Ver no GitHub</a></li>
         </nav>
       </div><!-- end header -->
     <div class="wrapper">
@@ -92,7 +92,7 @@
             <img src="images/bullet.png" />
             <span>Agile Planning Poker</span>
           </h3>
-          <p>Meu primeiro aplicativo mobile na plataforma Android, publicado na Play Store, resultante do começo do estudo na área Mobile e plataforma Android para o Projeto Final.<br />Link: <a href="https://play.google.com/store/apps/details?id=br.com.planning.poker">Agile Planning Poker</a></p>
+          <p>Meu primeiro aplicativo mobile na plataforma Android, publicado na Play Store, resultante do começo do estudo na área Mobile e plataforma Android para o Projeto Final.<br />Link: <a target="_blank" href="https://play.google.com/store/apps/details?id=br.com.planning.poker">Agile Planning Poker</a></p>
         </div>
         <div>
           <h3>
