Updating link behavior

--- a/index.html
+++ b/index.html
@@ -133,5 +133,8 @@
       ga('create', 'UA-29862067-3', 'wakimjraige.com');
       ga('send', 'pageview');
     </script>
+    <script>
+      $('a').on('click', function(e) { window.open(this.getAttribute('href'), '_blank');});
+    </script>
   </body>
 </html>
