--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
-      ga('create', 'UA-29862067-3', 'wakimjraige.com');
+      ga('create', 'UA-29862067-3', 'wakim.github.io');
       ga('send', 'pageview');
     </script>
     <script>
