--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
       ga('create', 'UA-29862067-3', 'wakim.github.io');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
     <script>
