--- a/index.en.html
+++ b/index.en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Wakim Jraige Site Pessoal</title>
+    <title>Wakim Jraige Personal Site</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -46,16 +46,16 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a target="_blank" href="https://github.com/wakim">Ver no GitHub</a></li>
+          <li class="fork"><a target="_blank" href="https://github.com/wakim">View on GitHub</a></li>
         </nav>
       </div><!-- end header -->
     <div class="wrapper">
       <section>
         <div id="title">
           <h1>Wakim Jraige</h1>
-          <p>Site Pessoal</p>
+          <p>Personal Site</p>
           <hr />
-          <span class="credits left">Project maintained by <a href="https://github.com/wakim" class="here">wakim</a></span>
+          <span class="credits left">Project maintained by <a href="https://github.com/wakim">wakim</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
       </section>
@@ -64,14 +64,14 @@
           <a name="resume" class="anchor" href="#resume">
             <span class="octicon octicon-link"></span>
           </a>
-          <span>Resumo</span>
+          <span>Resume</span>
           <span class="margin-right-10">
             <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
             <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/wakimjraige" data-format="click" data-related="false"></script>
           </span>
           <span class="right">
-         	 <span class="font-10"><a href="index.en.html">English Version</a></span> <span class="font-10">|</span>
-         	 <span class="font-10">Versão em Português</span>
+         	 <span class="font-10">English Version</span> <span class="font-10">|</span>
+         	 <span class="font-10"><a href="index.html" class="here">Versão em Português</a></span>
           </span>
         </h2>
 
@@ -80,18 +80,18 @@
         <img src="images/me.jpg" alt="Me" class="left margin-right-10" />
 
         <div>
-          <p class="justify">Graduado em Bacharelado em Ci&ecirc;ncias da Computa&ccedil;&atilde;o pela UFRJ.</p>
-          <p class="justify">Sou desenvolvedor Full Stack, especialmente nas &aacute;reas Web e Mobile. Motivado por novas t&eacute;cnologias, ferramentas e pr&aacute;ticas, voltadas para melhoria no desenvolvimento, aumento de produtividade e inova&ccedil;&atilde;o em solu&ccedil;&otilde;es.</p>
-          <p class="justify">Comecei na &aacute;rea de desenvolvimento WEB com manutenção e desenvolvimento de aplica&ccedil;&otilde;es Web utilizando parte do JavaEE (JSP, Servlets e JDBC) no back-end. HTML, JavaScript e CSS no front-end.</p>
-          <p class="justify">Minha segunda experi&ecirc;ncia em Web foi com JavaEE, utilizando EJB, JSF e JPA (Hibernate) no back-end. HTML, JavaScript (MVVM usando KnockoutJS) e CSS no front-end.</p>
-          <p class="justify">Meu interesse por Mobile surgiu motivado pelo Projeto Final, serviu como uma oportunidade para explorar o mundo Android. Possuo um app publicado e alguns em desenvolvimento (nas horas livres), originados de estudos utilizando sempre os padrões da plataforma.</p>
+          <p class="justify">Bachelor of Computer Science UFRJ.</p>
+          <p class="justify">I'm a Full Stack Developer, specially in Web and Mobile areas. Motivated by new technologies, tools and practices, focused on development improvements, productivity gain and innovations in solutions.</p>
+          <p class="justify">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (JSP, Servlets and JDBC) in the back-end and HTML, JavaScript and CSS on the front-end.</p>
+          <p class="justify">My Second experience on Web was using the complete JavaEE, using EJB, JSF and JPA (Hibernate) in back-end. HTML, JavaScript (MVVM using KnockoutJS) and CSS in the front-end.</p>
+          <p class="justify">My interest for Mobile appear motivated by my Graduate Thesis, has served as an opportunity to explore the Android Platform. I have one published app on Google Play Store and other in development (in my free time), originated from my studies always using the platform patterns.</p>
         </div>
 
         <h2>
           <a name="projects" class="anchor" href="#projects">
             <span class="octicon octicon-link"></span>
           </a>
-          <span>Projetos</span>
+          <span>Projects</span>
         </h2>
 
         <hr />
@@ -104,7 +104,7 @@
             <img src="images/bullet.png" />
             <span>Agile Planning Poker</span>
           </h3>
-          <p>Meu primeiro aplicativo mobile na plataforma Android, publicado na Play Store, resultante do começo do estudo na área Mobile e plataforma Android para o Projeto Final.<br />Link: <a target="_blank" href="https://play.google.com/store/apps/details?id=br.com.planning.poker">Agile Planning Poker</a></p>
+          <p>My first Android app, published on Google Play Store, result of the starting study on mobile area and Android Platform for my Graduate Thesis.<br />Link: <a target="_blank" href="https://play.google.com/store/apps/details?id=br.com.planning.poker">Agile Planning Poker</a></p>
         </div>
         <div>
           <h3>
@@ -114,14 +114,14 @@
             <img src="images/bullet.png" />
             <span>Distributed Planning Poker</span>
           </h3>
-          <p>Evolução do Agile Planning Poker, que utiliza a plataforma Play Games&reg; da Google&reg; para permitir a integração e comunicação entre os participantes de Planning Poker em Equipes Distribuídas.<br />Link: <a href="#">Em Breve</a></p>
+          <p>Evolution of <i>Agile Planning Poker</i>, using the Play Games&reg; platform from Google&reg; to allow the integration and communication between Planning Poker session peers from Distributed Teams.<br />Link: <a href="#">Soon</a></p>
         </div>
       </main>
       <footer>
         <span class="left margin-right-10">
           <!-- Posicione esta tag no cabeçalho ou imediatamente antes da tag de fechamento do corpo. -->
           <script type="text/javascript" src="https://apis.google.com/js/platform.js">
-            {lang: 'pt-BR'}
+            {lang: 'en'}
           </script>
 
           <!-- Posicione esta tag onde você deseja que o widget apareça. -->
