Distributed Planning Poker Link Included

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="images/bullet.png" />
             <span>Distributed Planning Poker</span>
           </h3>
-          <p>Evolução do Agile Planning Poker, que utiliza a plataforma Play Games&reg; da Google&reg; para permitir a integração e comunicação entre os participantes de Planning Poker em Equipes Distribuídas.<br />Link: <a href="#">Em Breve</a></p>
+          <p>Evolução do Agile Planning Poker, que utiliza a plataforma Play Games&reg; da Google&reg; para permitir a integração e comunicação entre os participantes de Planning Poker em Equipes Distribuídas.<br />Link: <a href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer">Distributed Planning Poker</a></p>
         </div>
       </main>
       <footer>
