--- a/index.en.html
+++ b/index.en.html
@@ -114,7 +114,7 @@
             <img src="images/bullet.png" />
             <span>Distributed Planning Poker</span>
           </h3>
-          <p>Evolution of <i>Agile Planning Poker</i>, using the Play Games&reg; platform from Google&reg; to allow the integration and communication between Planning Poker session peers from Distributed Teams.<br />Link: <a href="#">Soon</a></p>
+          <p>Evolution of <i>Agile Planning Poker</i>, using the Play Games&reg; platform from Google&reg; to allow the integration and communication between Planning Poker session peers from Distributed Teams.<br />Link: <a href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer">Distributed Planning Poker</a></p>
         </div>
       </main>
       <footer>
