Update and rename en.html to index.en.html

--- a/index.en.html
+++ b/index.en.html
@@ -49,7 +49,7 @@
           <div class="more" less="Less" more="More">More...</div>
         </div>
         <div class="more-wrapper" id="more-wrapper">
-          <p class="main-p">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (JSP, Servlets and JDBC) and SQL&nbsp;Server in the back-end and HTML, JavaScript and CSS on the front-end.</p>
+          <p class="main-p">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (using JSP, Servlets and JDBC) and SQL&nbsp;Server in the back-end and HTML, JavaScript and CSS in the front-end.</p>
           <p class="main-p">My Second experience on Web was using the complete JavaEE (using EJB, JSF and JPA) and MySQL&nbsp;in back-end. HTML, JavaScript (MVVM using KnockoutJS) and CSS in the front-end.</p>
           <p class="main-p">My interest for Mobile appear motivated by my Graduate Thesis, has served as an opportunity to explore the Android Platform. I have one published app on Google Play Store and other in development (in my free time), originated from my studies
             always using the platform patterns.</p>
