--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="w-inline-block here" href="#">
           <img class="language-image pt-br" src="images/20px-Flag_of_Brazil.svg.png" alt="53c027ecbe4f84272a2f4fdb_20px-Flag_of_Brazil.svg.png">
         </a>
-        <a class="w-inline-block here" href="en.html">
+        <a class="w-inline-block here" href="index.en.html">
           <img class="language-image en" src="images/Flag_of_the_United_States.svg.png" alt="53c02871da236d0047c40527_Flag_of_the_United_States.svg.png">
         </a>
       </section>
