--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         cursor: pointer;
     }
   </style>
+  <script type="text/javascript">
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-29862067-3', 'wakim.github.io');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+  </script>
 </head>
 <body>
   <div class="header-main-section">
@@ -146,13 +155,6 @@
   <script type="text/javascript" src="js/webflow.js"></script>
   <!--[if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
   <script type="text/javascript">
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-29862067-3', 'wakim.github.io');
-    ga('require', 'displayfeatures');
-    ga('send', 'pageview');
     $('a:not(.here)').on('click',
         function(e) {
             var url = this.getAttribute('href');
@@ -161,6 +163,7 @@
             }
         }
     );
+    
     $(function(){
         $('.more').click(function(){
             var $this = $(this);
@@ -173,6 +176,7 @@
             $this.toggleClass('state-less');
         });
     });
+    
     $(function(){
         var mail = ['.com', 'gmail', '@', '.jraige', 'wakim'];
         $('#mail').attr('href', 'mailto:'.concat(mail.reverse().join('')));
