Inclusao do dos dados do Wear Planning Poker

--- a/en.html
+++ b/en.html
@@ -59,7 +59,7 @@
       <section class="projects">
         <div class="w-row">
           <div class="w-col w-col-3 w-col-stack">
-            <h3>Projects</h3>
+            <h3>Personal Projects</h3>
           </div>
           <div class="w-col w-col-9 w-col-stack">
             <div class="w-slider low-res" data-animation="slide" data-duration="500" data-infinite="1" data-hide-arrows="1" data-easing="linear">
@@ -80,6 +80,22 @@
                     <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer" target="_blank">
                       <img src="images/en_generic_rgb_wo_45.png" alt="53c02eceda236d0047c40577_en_generic_rgb_wo_45.png">
                     </a>
+                  </div>
+                </div>
+                <div class="w-slide">
+                  <h4 class="project-header inner-slide">Wear Planning Poker</h4>
+                  <p class="project-description inner-slide-description tablet">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                    <br>
+                    <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
+                  <p class="project-description inner-slide-description phone">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                    <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
+                  <div class="center">
+                    <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer" target="_blank">
+                      <img src="images/pt-br_generic_rgb_wo_45.png" alt="53c0202b0da742282a6d01e6_pt-br_generic_rgb_wo_45.png">
+                    </a>
+                    <div class="w-embed w-iframe github-button">
+                      <iframe src="http://ghbtns.com/github-btn.html?user=wakim&repo=wearable-planning-poker&type=fork&count=false&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; position: relative;top: 10px;height: 30px;" allowTransparency="true"></iframe>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -109,6 +125,21 @@
                 target="_blank" data-ix="new-interaction-2">
                   <img src="images/en_generic_rgb_wo_45.png" alt="53c02eceda236d0047c40577_en_generic_rgb_wo_45.png">
                 </a>
+              </li>
+              <li>
+                <h4 class="project-header">Wear Planning Poker</h4>
+                <p class="project-description">Extension of Agile Planning Poker, on Wearable platform. Integrates optionally with Agile Planning Poker on your Handheld (Smartphone or Tablet) to synchronize state.
+                  <br>
+                  <br>This app provides a set of decks for Planning Poker sessions, adapted to Wearable Platform.
+                  <br>
+                  <br>When connected with Agile Planning Poker on Handheld, it’s possible to mirror the state between apps (colors and selection).
+                </p>
+                <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.wear" target="_blank">
+                  <img src="images/pt-br_generic_rgb_wo_45.png" alt="53c0202b0da742282a6d01e6_pt-br_generic_rgb_wo_45.png">
+                </a>
+                <div class="w-embed w-iframe github-button">
+                  <iframe src="http://ghbtns.com/github-btn.html?user=wakim&repo=wearable-planning-poker&type=fork&count=false&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; position: relative;top: 10px;height: 30px;" allowTransparency="true"></iframe>
+                </div>
               </li>
             </ul>
           </div>
