Acertos dos paragrafos dos projetos pessoais

--- a/index.en.html
+++ b/index.en.html
@@ -119,8 +119,9 @@
             <ul class="high-res">
               <li>
                 <h4 class="project-header">Agile Planning Poker</h4>
-                <p class="project-description">My first Android app, published on Google Play Store, result of the starting my study on mobile area and Android Platform for my Graduate Thesis.</p>
-                <p>The app provides some decks, including a customizable, for Planning Poker sessions. With animations&nbsp;that make the usage more interesting.</p>
+                <p class="project-description">My first Android app, published on Google Play Store, result of the starting my study on mobile area and Android Platform for my Graduate Thesis.
+                <br>
+                <br>The app provides some decks, including a customizable, for Planning Poker sessions. With animations&nbsp;that make the usage more interesting.</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker"
                 target="_blank">
                   <img src="images/en_generic_rgb_wo_45.png" alt="53c02eceda236d0047c40577_en_generic_rgb_wo_45.png">
@@ -128,8 +129,9 @@
               </li>
               <li>
                 <h4 class="project-header">Distributed Planning Poker</h4>
-                <p class="project-description">Evolution of&nbsp;Agile Planning Poker, using the Play Games® platform from Google® to allow the integration and communication between Planning Poker session peers from Distributed Teams.</p>
-                <p>This app&nbsp;facilitates the realization of Planning Poker sessions between members of a Distributed Team, no matter the location of the peers.</p>
+                <p class="project-description">Evolution of&nbsp;Agile Planning Poker, using the Play Games® platform from Google® to allow the integration and communication between Planning Poker session peers from Distributed Teams.
+                <br>
+                <br>This app&nbsp;facilitates the realization of Planning Poker sessions between members of a Distributed Team, no matter the location of the peers.</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer"
                 target="_blank" data-ix="new-interaction-2">
                   <img src="images/en_generic_rgb_wo_45.png" alt="53c02eceda236d0047c40577_en_generic_rgb_wo_45.png">
