Acerto da quantidade de aplicativos no texto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="more-wrapper" id="more-wrapper">
           <p class="main-p">Comecei na área de desenvolvimento WEB com manutenção e desenvolvimento de aplicações Web utilizando parte do JavaEE (usando JSP, Servlets e JDBC) e banco de dados SQL&nbsp;Server no back-end. HTML, JavaScript e CSS no front-end.</p>
           <p class="main-p">Minha segunda experiência em Web foi como integrante de uma equipe de desenvolvimento Scrum utilizando JavaEE (usando EJB, JSF e JPA) e banco de dados MySQL no back-end. HTML, JavaScript (MVVM usando KnockoutJS) e CSS no front-end.</p>
-          <p class="main-p">Meu interesse por Mobile surgiu motivado pelo Projeto Final, serviu como uma oportunidade para explorar o mundo Android. Possuo dois aplicativos publicados na Play Store, originados de estudos seguindo sempre os padrões da plataforma.</p>
+          <p class="main-p">Meu interesse por Mobile surgiu motivado pelo Projeto Final, serviu como uma oportunidade para explorar o mundo Android. Possuo três aplicativos publicados na Play Store e mais um em desenvolvimento, originados de estudos seguindo sempre os padrões da plataforma.</p>
         </div>
       </section>
       <div class="separator separator-50"></div>
