Acerto na traducao e acertos no texto

--- a/index.en.html
+++ b/index.en.html
@@ -60,7 +60,7 @@
         <div class="more-wrapper" id="more-wrapper">
           <p class="main-p">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (using JSP, Servlets and JDBC) and SQL&nbsp;Server in the back-end and HTML, JavaScript and CSS in the front-end.</p>
           <p class="main-p">My Second experience on Web was using the complete JavaEE (using EJB, JSF and JPA) and MySQL&nbsp;in back-end. HTML, JavaScript (MVVM using KnockoutJS) and CSS in the front-end.</p>
-          <p class="main-p">My interest for Mobile appear motivated by my Graduate Thesis, has served as an opportunity to explore the Android Platform. I have three published apps on Google Play and other in development (in free time), originated from my studies always using the platform patterns.</p>
+          <p class="main-p">My interest for Mobile appear motivated by my Graduate Thesis, has served as an opportunity to explore the Android Platform. I have three published apps on Google Play and other in development (in my free time), originated from my studies always using the platform patterns.</p>
         </div>
       </section>
       <div class="separator separator-50"></div>
@@ -92,11 +92,11 @@
                 </div>
                 <div class="w-slide">
                   <h4 class="project-header inner-slide">Wear Planning Poker</h4>
-                  <p class="project-description inner-slide-description tablet">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                  <p class="project-description inner-slide-description tablet">This app provides a set of decks for Planning Poker sessions, adapted to Wearable Platform.
                     <br>
-                    <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
-                  <p class="project-description inner-slide-description phone">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
-                    <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
+                    <br>Integrates optionally with Agile Planning Poker on your Handheld (Smartphone or Tablet) to synchronize state (colors and selection).</p>
+                  <p class="project-description inner-slide-description phone">This app provides a set of decks for Planning Poker sessions, adapted to Wearable Platform.
+                    <br>Integrates optionally with Agile Planning Poker on your Handheld (Smartphone or Tablet) to synchronize state (colors and selection).</p>
                   <div class="center">
                     <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer" target="_blank">
                       <img src="images/pt-br_generic_rgb_wo_45.png" alt="53c0202b0da742282a6d01e6_pt-br_generic_rgb_wo_45.png">
@@ -138,9 +138,9 @@
               </li>
               <li>
                 <h4 class="project-header">Wear Planning Poker</h4>
-                <p class="project-description">Extension of Agile Planning Poker, on Wearable platform. Integrates optionally with Agile Planning Poker on your Handheld (Smartphone or Tablet) to synchronize state.
+                <p class="project-description">This app provides a set of decks for Planning Poker sessions, adapted to Wearable Platform. 
                   <br>
-                  <br>This app provides a set of decks for Planning Poker sessions, adapted to Wearable Platform.
+                  <br>Integrates optionally with Agile Planning Poker on your Handheld (Smartphone or Tablet) to synchronize state.
                   <br>
                   <br>When connected with Agile Planning Poker on Handheld, it’s possible to mirror the state between apps (colors and selection).
                 </p>
