--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 </div>
                 <div class="w-slide">
                   <h4 class="project-header inner-slide">Wear Planning Poker</h4>
-                  <p class="project-description inner-slide-description tablet">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                  <p class="project-description inner-slide-description tablet">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado a plataforma Wearable.
                     <br>
                     <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
-                  <p class="project-description inner-slide-description phone">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                  <p class="project-description inner-slide-description phone">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado a plataforma Wearable.
                     <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
                   <div class="center">
                     <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer" target="_blank">
@@ -138,9 +138,9 @@
               </li>
               <li>
                 <h4 class="project-header">Wear Planning Poker</h4>
-                <p class="project-description">Extensão do Agile Planning Poker, na plataforma Android Wearable. Se integra opcionalmente com o dispositivo Handheld (Smartphone ou Tablet)&nbsp;para sincronização de dados.
+                <p class="project-description">O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado a plataforma Wearable. 
                   <br>
-                  <br>O aplicativo fornece uma série de baralhos para sessões de Planning Poker,&nbsp;&nbsp;adaptado ao ecosistema Wearable.
+                  <br>Se integra opcionalmente com o dispositivo Handheld (Smartphone ou Tablet)&nbsp;para sincronização de dados.
                   <br>
                   <br>Na presença do Handheld e do Agile Planning Poker, é possível espelhar o estado entre os aplicativos (cores e seleções).</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.wear" target="_blank">
