--- a/index.en.html
+++ b/index.en.html
@@ -58,8 +58,8 @@
           <div class="more" less="Less" more="More">More...</div>
         </div>
         <div class="more-wrapper" id="more-wrapper">
-          <p class="main-p">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (using JSP, Servlets and JDBC) and SQL&nbsp;Server in the back-end and HTML, JavaScript and CSS in the front-end.</p>
-          <p class="main-p">My Second experience on Web was using the complete JavaEE (using EJB, JSF and JPA) and MySQL&nbsp;in back-end. HTML, JavaScript (MVVM using KnockoutJS) and CSS in the front-end.</p>
+          <p class="main-p">Started on Web Development area with development and maintenance of an web applications using part of JavaEE (using JSP, Servlets and JDBC) with Tomcat as Servlet Container and SQL&nbsp;Server in the back-end and HTML, JavaScript and CSS in the front-end.</p>
+          <p class="main-p">My Second experience on Web was using the complete JavaEE (using EJB, JSF and JPA) with JBoss 6 and 7 as Application Server and MySQL&nbsp;in back-end. HTML, JavaScript (MVVM using KnockoutJS) and CSS in the front-end. With automated tests using Selenium, JUnit and DBUnit.</p>
           <p class="main-p">My interest for Mobile appear motivated by my Graduate Thesis, has served as an opportunity to explore the Android Platform. I have three published apps on Google Play and other in development (in my free time), originated from my studies always using the platform patterns.</p>
         </div>
       </section>
@@ -120,7 +120,7 @@
                 <h4 class="project-header">Agile Planning Poker</h4>
                 <p class="project-description">My first Android app, published on Google Play Store, result of the starting my study on mobile area and Android Platform for my Graduate Thesis.
                 <br>
-                <br>The app provides some decks, including a customizable, for Planning Poker sessions. With animations&nbsp;that make the usage more interesting.</p>
+                <br>The app provides some decks, including a customizable one, for Planning Poker sessions. With animations&nbsp;that makes the use more interesting.</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker"
                 target="_blank">
                   <img src="images/en_generic_rgb_wo_45.png" alt="53c02eceda236d0047c40577_en_generic_rgb_wo_45.png">
