--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <div class="more" less="Menos" more="Mais">Mais...</div>
         </div>
         <div class="more-wrapper" id="more-wrapper">
-          <p class="main-p">Comecei na área de desenvolvimento WEB com manutenção e desenvolvimento de aplicações Web utilizando parte do JavaEE (usando JSP, Servlets e JDBC) e banco de dados SQL&nbsp;Server no back-end. HTML, JavaScript e CSS no front-end.</p>
-          <p class="main-p">Minha segunda experiência em Web foi como integrante de uma equipe de desenvolvimento Scrum utilizando JavaEE (usando EJB, JSF e JPA) e banco de dados MySQL no back-end. HTML, JavaScript (MVVM usando KnockoutJS) e CSS no front-end.</p>
+          <p class="main-p">Comecei na área de desenvolvimento WEB com manutenção e desenvolvimento de aplicações Web utilizando parte do JavaEE (usando JSP, Servlets e JDBC) com Container de Servlets Tomcat e banco de dados SQL&nbsp;Server no back-end. HTML, JavaScript e CSS no front-end.</p>
+          <p class="main-p">Minha segunda experiência em Web foi como integrante de uma equipe de desenvolvimento Scrum utilizando JavaEE (usando EJB, JSF e JPA) com Servidor de Aplicação JBoss 6 e 7 e banco de dados MySQL no back-end. HTML, JavaScript (MVVM usando KnockoutJS) e CSS no front-end. Com realização de testes automatizados com JUnit, Selenium e DBUnit.</p>
           <p class="main-p">Meu interesse por Mobile surgiu motivado pelo Projeto Final, serviu como uma oportunidade para explorar o mundo Android. Possuo três aplicativos publicados na Play Store e mais um em desenvolvimento, originados de estudos seguindo sempre os padrões da plataforma.</p>
         </div>
       </section>
@@ -120,7 +120,7 @@
                 <h4 class="project-header">Agile Planning Poker</h4>
                 <p class="project-description">Meu primeiro aplicativo mobile na plataforma Android, publicado na Play Store, resultante do começo do estudo na área Mobile e plataforma Android para o Projeto Final.
                   <br>
-                  <br>O aplicativo fornece uma série de baralhos, incluindo um baralho personalizável para sessões de Planning Poker, com animações que tornam o uso mais interessante.</p>
+                  <br>O aplicativo fornece uma série de baralhos, incluindo um baralho personalizável, para sessões de Planning Poker. Com animações que tornam o uso mais interessante.</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker"
                 target="_blank" data-ix="new-interaction-2">
                   <img src="images/pt-br_generic_rgb_wo_45.png" alt="53c0202b0da742282a6d01e6_pt-br_generic_rgb_wo_45.png">
@@ -130,8 +130,7 @@
                 <h4 class="project-header">Distributed Planning Poker</h4>
                 <p class="project-description">Evolução do Agile Planning Poker, que utiliza a plataforma Play Games® da Google® para permitir a integração e comunicação entre os participantes de Planning Poker em equipes distribuídas.
                   <br>
-                  <br>O aplicativo facilita a realização de sessões de Planning Poker de equipes distribuídas, não importanto a localização dos membros, fornecendo acompanhamento para as etapas de um rodada de votação, incluído um espaço para discussão de
-                  ideias.</p>
+                  <br>O aplicativo facilita a realização de sessões de Planning Poker de equipes distribuídas, não importanto a localização dos membros, fornecendo acompanhamento para as etapas de um rodada de votação, incluído um espaço para discussão de ideias.</p>
                 <a class="w-inline-block" href="https://play.google.com/store/apps/details?id=br.com.planning.poker.multiplayer" target="_blank" data-ix="new-interaction-2">
                   <img src="images/pt-br_generic_rgb_wo_45.png" alt="53c0202b0da742282a6d01e6_pt-br_generic_rgb_wo_45.png">
                 </a>
