Remocao do parallax

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </script>
   </head>
   <body ng-controller="main">
-    <div class="parallax-window" >
+    <div class="header-main-section">
       <header class="header">
         <section class="w-container title-container">
           <img class="title-image" src="images/rsz_1me.png" alt="Me">
@@ -190,7 +190,6 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="bower_components/parallax.js/parallax.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/webflow.js"></script>
