--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="header-main-section">
       <header class="header">
         <section class="w-container title-container">
-          <img class="title-image" src="images/rsz_1me.png" alt="Me">
+          <img class="title-image" src="images/time-wakim.jpg" alt="Me">
           <h1 class="title">Wakim Jraige</h1>
           <a class="w-inline-block here" onclick="return false;">
             <img class="language-image pt-br{{currentLang === 'pt' ? ' current' : ''}}" ng-click="setLocale('pt')" src="images/br.png" alt="Português do Brasil">
