--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="utf-8" />
     <title>Wakim Jraige</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="description" content="Site pessoal de Wakim Jraige" />
+
+    <meta name="twitter:card" content="Site pessoal de Wakim Jraige">
+    <meta name="twitter:site" content="@wakimjraige">
+    <meta name="twitter:title" content="Wakim Jraige">
+    <meta name="twitter:description" content="Site pessoal de Wakim Jraige. Desenvolvedor Android e Web.">
+    <meta name="twitter:creator" content="@wakimjraige">
+
+    <meta name="twitter:image" content="http://www.wakimjraige.com/images/time-wakim.jpg">
+
+    <meta property="og:title" content="Site pessoal de Wakim Jraige" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.wakimjraige.com" />
+    <meta property="og:image" content="http://www.wakimjraige.com/images/time-wakim.jpg" />
+    <meta property="og:description" content="Site pessoal de Wakim Jraige. Desenvolvedor Android e Web." /> 
+    <meta property="og:site_name" content="Site pessoal de Wakim Jraige" />
+    <meta property="fb:admins" content="10150979369546009" />
     
     <link rel="stylesheet" type="text/css" href="bower_components/owl.carousel/dist/assets/owl.carousel.min.css" />
     <link rel="stylesheet" type="text/css" href="bower_components/normalize.css/normalize.css" />
